bk_ida/gobmkida/c2/find_cap2
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/find_cap2/src/engine/reading.c:3607:11: error: use of undeclared identifier 'xmmword_493C10'
( __m128i)xmmword_493C10))) ) 
          ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/find_cap2/src/engine/reading.c:3622:8: error: use of undeclared identifier 'dword_494710'
return dword_494710[defense]; 
       ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/find_cap2/src/obj/1/reading.o] Error 1
